--- a/index.html
+++ b/index.html
@@ -12,51 +12,51 @@
         <div class="heart-rain" id="heartRain"></div>
 
         <div class="photo-gallery" id="photoGallery">
-            <div class="photo-container" onclick="showFullImage('fotos/pao1.jpeg', 'Mi Estrella')">
+            <div class="photo-container" onclick="showFullImage('pao1.jpeg', 'Mi Estrella')">
                 <img src="pao1.jpeg" alt="Pao 1" class="photo">
                 <div class="photo-caption">Mi Estrella</div>
             </div>
-            <div class="photo-container large" onclick="showFullImage('fotos/pao2.jpeg', 'Mi Luz')">
+            <div class="photo-container large" onclick="showFullImage('pao2.jpeg', 'Mi Luz')">
                 <img src="pao2.jpeg" alt="Pao 2" class="photo">
                 <div class="photo-caption">Mi Luz</div>
             </div>
-            <div class="photo-container" onclick="showFullImage('fotos/pao3.jpeg', 'Te Quiero')">
+            <div class="photo-container" onclick="showFullImage('pao3.jpeg', 'Te Quiero')">
                 <img src="pao3.jpeg" alt="Pao 3" class="photo">
                 <div class="photo-caption">Te Quiero</div>
             </div>
-            <div class="photo-container large" onclick="showFullImage('fotos/pao4.jpeg', 'Mi Amor')">
+            <div class="photo-container large" onclick="showFullImage('pao4.jpeg', 'Mi Amor')">
                 <img src="pao4.jpeg" alt="Pao 4" class="photo">
                 <div class="photo-caption">Mi Amor</div>
             </div>
-            <div class="photo-container" onclick="showFullImage('fotos/pao5.jpeg', 'Divertida')">
+            <div class="photo-container" onclick="showFullImage('pao5.jpeg', 'Divertida')">
                 <img src="pao5.jpeg" alt="Pao 5" class="photo">
                 <div class="photo-caption">Divertida</div>
             </div>
-            <div class="photo-container" onclick="showFullImage('fotos/pao6.jpeg', 'Mi Tesoro')">
+            <div class="photo-container" onclick="showFullImage('pao6.jpeg', 'Mi Tesoro')">
                 <img src="pao6.jpeg" alt="Pao 6" class="photo">
                 <div class="photo-caption">Mi Tesoro</div>
             </div>
-            <div class="photo-container large" onclick="showFullImage('fotos/pao7.jpeg', 'Mi Todo')">
+            <div class="photo-container large" onclick="showFullImage('pao7.jpeg', 'Mi Todo')">
                 <img src="pao7.jpeg" alt="Pao 7" class="photo">
                 <div class="photo-caption">Mi Todo</div>
             </div>
-            <div class="photo-container large" onclick="showFullImage('fotos/pao8.jpeg', 'Creativa')">
+            <div class="photo-container large" onclick="showFullImage('pao8.jpeg', 'Creativa')">
                 <img src="pao8.jpeg" alt="Pao 8" class="photo">
                 <div class="photo-caption">Creativa</div>
             </div>
-            <div class="photo-container" onclick="showFullImage('fotos/pao9.jpeg', 'Mi Inspiración')">
+            <div class="photo-container" onclick="showFullImage('pao9.jpeg', 'Mi Inspiración')">
                 <img src="pao9.jpeg" alt="Pao 9" class="photo">
                 <div class="photo-caption">Mi Inspiración</div>
             </div>
-            <div class="photo-container" onclick="showFullImage('fotos/pao10.jpeg', 'Eres Única')">
+            <div class="photo-container" onclick="showFullImage('pao10.jpeg', 'Eres Única')">
                 <img src="pao10.jpeg" alt="Pao 10" class="photo">
                 <div class="photo-caption">Eres Única</div>
             </div>
-            <div class="photo-container" onclick="showFullImage('fotos/pao11.jpeg', 'Mi Felicidad')">
+            <div class="photo-container" onclick="showFullImage('pao11.jpeg', 'Mi Felicidad')">
                 <img src="pao11.jpeg" alt="Pao 11" class="photo">
                 <div class="photo-caption">Mi Felicidad</div>
             </div>
-            <div class="photo-container" onclick="showFullImage('fotos/pao12.jpeg', 'Por Siempre')">
+            <div class="photo-container" onclick="showFullImage('pao12.jpeg', 'Por Siempre')">
                 <img src="pao12.jpeg" alt="Pao 12" class="photo">
                 <div class="photo-caption">Por Siempre</div>
             </div>
